# newsletter

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: general.yaml
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
